Use margin to implement horizontal spacing to avoid extra container element

--- a/authui/src/authflowv2/components/widget.css
+++ b/authui/src/authflowv2/components/widget.css
@@ -17,6 +17,9 @@
       --widget__box-shadow: none;
       --widget__border: none;
     }
+
+    /* Internal use */
+    --widget-content-item__x-spaceing--settings: 2rem;
   }
 
   :root.dark {
@@ -77,12 +80,18 @@
       @apply self-stretch;
     }
 
-    .widget-content-item__px--settings {
-      @apply px-8;
-    }
-
     .widget-content.widget-content--settings {
       @apply px-0 py-8;
+    }
+
+    .widget-content-item__px--settings {
+      padding-left: var(--widget-content-item__x-spaceing--settings);
+      padding-right: var(--widget-content-item__x-spaceing--settings);
+    }
+
+    .widget-content-item__mx--settings {
+      margin-left: var(--widget-content-item__x-spaceing--settings);
+      margin-right: var(--widget-content-item__x-spaceing--settings);
     }
   }
 
@@ -90,11 +99,7 @@
     @apply widget-content-item__px--settings;
   }
 
-  .widget-content__alert-container--settings {
-    @apply widget-content-item__px--settings;
-
-    &:not(&:has(.alert-message[data-error-message])) {
-      display: none;
-    }
+  .widget-content__alert--settings {
+    @apply widget-content-item__mx--settings;
   }
 }
